--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,7 +20,7 @@ set -g @save-complete-history-path "$HOMEtmp/logs/tmux_sessions"
 
 # use a theme
 set -g @plugin '2kabhishek/tmux2k'
-set -g @tmux2k-theme 'gruvbox'
+set -g @tmux2k-theme 'catppuccin'
 
 # 
 #     battery: Show battery stats and percentage
@@ -37,7 +37,7 @@ set -g @tmux2k-theme 'gruvbox'
 # 
 
 set -g @tmux2k-left-plugins "git"
-set -g @tmux2k-right-plugins "network cpu ram time"
+set -g @tmux2k-right-plugins "time"
 
 set -g @tmux2k-compact-windows true
 
