--- a/crossroads/polybar/config.ini
+++ b/crossroads/polybar/config.ini
@@ -59,7 +59,7 @@ wm-restack = generic
 [bar/main]
 inherit = bar/base
 modules-left = m1
-modules-right = cpu memory pkg_updates should_reboot pulseaudio xkeyboard systray date powermenu 
+modules-right = battery cpu memory pkg_updates should_reboot pulseaudio xkeyboard systray date powermenu 
 modules-center = i3
 
 [module/i3]
@@ -227,5 +227,32 @@ exec = checkupdates | wc -l
 interval = 1000
 click-left = wezterm start --always-new-process tmux new-session -n "UPDATE" sudo pacman --noconfirm -Syu ; echo Done - Press enter to exit; read
 
+[module/battery]
+type = internal/battery
+
+; This is useful in case the battery never reports 100% charge
+; Default: 100
+full-at = 99
+
+; format-low once this charge percentage is reached
+; Default: 10
+; New in version 3.6.0
+low-at = 5
+
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
+battery = BAT0
+adapter = ADP1
+
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
+poll-interval = 5
 
 ; vim:ft=dosini
