--- a/crossroads/polybar/config.ini
+++ b/crossroads/polybar/config.ini
@@ -59,7 +59,7 @@ wm-restack = generic
 [bar/main]
 inherit = bar/base
 modules-left = m1
-modules-right = battery cpu memory pkg_updates should_reboot pulseaudio xkeyboard systray date powermenu 
+modules-right = battery pkg_updates should_reboot pulseaudio xkeyboard systray date powermenu 
 modules-center = i3
 
 [module/i3]
@@ -206,13 +206,13 @@ inherit = base-menu
 
 label-open =  
 
-menu-0-0 = ⏻ Poweroff
+menu-0-0 = ⏻ P
 menu-0-0-exec = poweroff
 
-menu-0-1 =  Reboot 
+menu-0-1 =  R
 menu-0-1-exec = systemctl reboot
 
-menu-0-2 =  Suspend
+menu-0-2 =  S
 menu-0-2-exec = systemctl suspend
 
 [module/should_reboot]
