--- a/crossroads/i3/config
+++ b/crossroads/i3/config
@@ -21,7 +21,7 @@ popup_during_fullscreen smart
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Maple Mono SC NF 10
+font pango:Departure Mono 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -94,6 +94,7 @@ bindsym $mod+Return exec wezterm
 # bindsym $mod+d exec "rofi -modi drun,run -show drun"
 # bindsym $mod+Shift+d exec "rofi -modi drun,run -show run"
 bindsym $mod+d exec "rofi -show combi -modes combi -combi-modes 'drun,run,window'"
+bindsym $mod+Shift+d exec "rofi -show combi -modes combi -combi-modes 'window'"
 
 # kill focused window
 bindsym $mod+Shift+q kill
