--- a/tmndesk/i3/config
+++ b/tmndesk/i3/config
@@ -62,7 +62,7 @@ exec --no-startup-id nm-applet
 # bluetooth device manager
 exec --no-startup-id blueman-applet
 
-exec $HOME/.screenlayout/default.sh
+exec $HOME/.screenlayout/three_monitor.sh
 exec_always $HOME/bin/change_wall.sh
 exec redshift-gtk -l 23.772113677140343:90.40864299455157
 
@@ -237,7 +237,7 @@ workspace $cl3 output $o1
 # other things
 workspace "gm" output $o1
 workspace "og" output $o2
-workspace "nt" output $o2
+workspace "nt" output $o3
 workspace "uw" output $o2
 workspace "fa" output $o2
 
@@ -279,7 +279,7 @@ bindsym $mod+Shift+Tab move container to output next; focus output next
 assign [class="steam"] gm
 assign [title="Steam"] gm
 assign [title="Signal"] fa
-assign [class="obsidian"] nt
+assign [class="Nyxt"] nt
 assign [class="Upwork"] uw
 
 for_window [window_role="pop-up"] floating enable
@@ -409,7 +409,8 @@ bindsym $mod+Shift+Ctrl+w exec "$HOME/bin/change_wall.sh > ~/tmp/logs/change_wal
 bindsym $mod+Shift+Ctrl+d exec "cat $HOME/tmp/logs/change_wall.log >> $HOME/tmp/logs/rem_wall.log"
 
 # finally apply layouts
-exec --no-startup-id "i3-msg 'workspace og; append_layout /home/mahmood/Dropbox/configs/i3/workspace-og.json'"
+exec --no-startup-id "i3-msg 'workspace og; append_layout /home/mahmood/Dropbox/configs/tmndesk/i3/workspace-og.json'"
+exec --no-startup-id "i3-msg 'workspace nt; append_layout /home/mahmood/Dropbox/configs/tmndesk/i3/workspace-nt.json'"
 # TODO: Add more auto layout things
 
 # Start i3bar to display a workspace bar (plus the system information i3status
