--- a/tmndesk/polybar/config.ini
+++ b/tmndesk/polybar/config.ini
@@ -70,10 +70,15 @@ modules-center = i3
 [bar/other]
 inherit = bar/base
 monitor=HDMI-0
-
 modules-left = m2
 modules-right = date cpu memory pkg_updates should_reboot
 modules-center = active_task
+
+[bar/tiny]
+inherit = bar/base
+monitor=HDMI-2
+modules-left = m3
+modules-center = date
 
 [module/i3]
 type = internal/i3
