--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -297,7 +297,7 @@ detect-transient = true;
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-glx-no-stencil = true;
+# glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
@@ -305,7 +305,7 @@ glx-no-stencil = true;
 # Recommended if it works.
 #
 # glx-no-rebind-pixmap = false
-glx-no-rebind-pixmap = true
+# glx-no-rebind-pixmap = true
 
 # Disable the use of damage information.
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
