--- a/tmndesk/polybar/config.ini
+++ b/tmndesk/polybar/config.ini
@@ -65,7 +65,7 @@ wm-restack = generic
 inherit = bar/base
 modules-left = m1
 modules-right = filesystem pulseaudio xkeyboard systray date powermenu
-modules-center = i3
+modules-center = i3 mpris-tail
 
 [bar/other]
 inherit = bar/base
@@ -257,6 +257,14 @@ label =  %output%
 exec = checkupdates | wc -l
 interval = 1000
 click-left = wezterm start --always-new-process tmux new-session -n "UPDATE" sudo pacman --noconfirm -Syu ; echo Done - Press enter to exit; read
+
+[module/mpris-tail]
+type = custom/script
+exec = ~/Dropbox/configs/scripts/polybar/mpris.py -f '{icon} {artist} - {title}'
+tail = true
+click-left = ~/Dropbox/configs/scripts/polybar/mpris.py previous &
+click-right = ~/Dropbox/configs/scripts/polybar/mpris.py next &
+click-middle = ~/Dropbox/configs/scripts/polybar/mpris.py play-pause &
 
 
 ; vim:ft=dosini
