--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,41 +19,45 @@ set -g @save-complete-history-path "$HOMEtmp/logs/tmux_sessions"
 # set -g @plugin 'o0th/tmux-nova'
 
 # use a theme
-set -g @plugin "nordtheme/tmux"
+set -g @plugin '2kabhishek/tmux2k'
+set -g @tmux2k-theme 'catppuccin'
 
-## ---- # 
-## ---- #     battery: Show battery stats and percentage
-## ---- #     git: Show Git branch and status information
-## ---- #     cpu: Show CPU usage information
-## ---- #     gpu: Show GPU usage information
-## ---- #     ram: Show RAM usage information
-## ---- #     network: Show network status and statistics
-## ---- #     bandwidth: Show network bandwidth usage
-## ---- #     ping: Show network ping statistics
-## ---- #     time: Show current time and date
-## ---- #     weather: Show weather information
-## ---- #     window: tmux window list
-## ---- # 
-## ---- 
-## ---- # set -g @plugin '2kabhishek/tmux2k'
-## ---- # set -g @tmux2k-theme 'catppuccin'
-## ---- set -g @tmux2k-left-plugins "git"
-## ---- set -g @tmux2k-right-plugins "time"
-## ---- set -g @tmux2k-compact-windows true
-## ---- set -g @tmux2k-icons-only false
-## ---- set -g @tmux2k-show-powerline false
-## ---- #
-## ---- # # to customize duo bg and fg
-## ---- # set -g @tmux2k-duo-fg "#1688f0" # this will get you duo blue shown above
-## ---- # set -g @tmux2k-duo-bg "#000000" # this will set the bg for duo theme
-## ---- #
-## ---- # # to set powerline symbols
-## ---- # set -g @tmux2k-right-sep  # alternate right status bar sep
-## ---- # set -g @tmux2k-win-right-sep  # alternate window right sep
-## ----
-## ----
-## ---- # set start icon, accpets: `session`, 'window`, or any string
-## ---- set -g @tmux2k-start-icon ""
+# 
+#     battery: Show battery stats and percentage
+#     git: Show Git branch and status information
+#     cpu: Show CPU usage information
+#     gpu: Show GPU usage information
+#     ram: Show RAM usage information
+#     network: Show network status and statistics
+#     bandwidth: Show network bandwidth usage
+#     ping: Show network ping statistics
+#     time: Show current time and date
+#     weather: Show weather information
+#     window: tmux window list
+# 
+
+set -g @tmux2k-left-plugins "git"
+set -g @tmux2k-right-plugins "time"
+
+set -g @tmux2k-compact-windows true
+
+#
+# # to show icons only
+set -g @tmux2k-icons-only false
+#
+# # to customize duo bg and fg
+# set -g @tmux2k-duo-fg "#1688f0" # this will get you duo blue shown above
+# set -g @tmux2k-duo-bg "#000000" # this will set the bg for duo theme
+#
+# # to set powerline symbols
+# set -g @tmux2k-right-sep  # alternate right status bar sep
+# set -g @tmux2k-win-right-sep  # alternate window right sep
+#
+# # to not show powerline
+set -g @tmux2k-show-powerline false
+#
+# # set start icon, accpets: `session`, 'window`, or any string
+# set -g @tmux2k-start-icon ""
 
 set -g @plugin 'jaclu/tmux-menus'
 
