--- a/tmndesk/polybar/config.ini
+++ b/tmndesk/polybar/config.ini
@@ -142,6 +142,8 @@ label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
 mount-1 = /home
 
+mount-2 = /var
+
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
