--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,7 +37,7 @@ set -g @tmux2k-theme 'catppuccin'
 # 
 
 set -g @tmux2k-left-plugins "git"
-set -g @tmux2k-right-plugins "time"
+set -g @tmux2k-right-plugins false
 
 set -g @tmux2k-compact-windows true
 
