--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,12 @@
 set -g default-terminal screen-256color
+set -as terminal-features ",xterm*:RGB"
+
+#urxvt tab like window switching (-n: no prior escape seq)
+bind -n S-down new-window
+bind -n S-left prev
+bind -n S-right next
+bind -n C-left swap-window -t -1
+bind -n C-right swap-window -t +1
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -8,6 +16,8 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @logging-path "$HOME/tmp/logs/tmux_sessions"
 set -g @screen-capture-path "$HOME/tmp/logs/tmux_sessions"
 set -g @save-complete-history-path "$HOMEtmp/logs/tmux_sessions"
+
+set -g @plugin 'alexwforsythe/tmux-which-key'
 
 
 # set -g @plugin 'catppuccin/tmux#latest'
