New starship color preset made!

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set -g default-terminal screen-256color
-set -as terminal-features ",xterm*:RGB"
+set -g default-terminal "xterm-256color"
+set -ag terminal-overrides ",xterm-256color:Tc"
 
 #urxvt tab like window switching (-n: no prior escape seq)
 bind -n S-down new-window
