--- a/tmndesk/i3/config
+++ b/tmndesk/i3/config
@@ -21,7 +21,7 @@ popup_during_fullscreen smart
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:MartianMono NF Cond 10
+font pango:Departure Mono 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -86,7 +86,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec ghostty
+bindsym $mod+Return exec ptyxis --new-window
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
@@ -395,8 +395,8 @@ mode "$mode_launcher" {
     bindsym l exec gnome-calculator, mode "default"
     bindsym b exec blender, mode "default"
     bindsym r exec krita, mode "default"
-    bindsym v exec wezterm start vim, mode "default"
-    bindsym y exec wezterm start yazi, mode "default"
+    bindsym v exec ptyxis -- vim, mode "default"
+    bindsym y exec ptyxis -- yazi, mode "default"
     bindsym x exec virtualbox, mode "default"
 
     # back to normal: Enter or Escape or $mod+r
