--- a/tmndesk/polybar/config.ini
+++ b/tmndesk/polybar/config.ini
@@ -48,7 +48,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = Maple Mono NF;2
+font-0 = MartianMono NF Cond;2
 
 
 cursor-click = pointer
